fix nazo-scrollbar

--- a/src/stylus/setting/_color.styl
+++ b/src/stylus/setting/_color.styl
@@ -26,6 +26,7 @@ c_pics_red = #e66f6f
 c_pics_white = #fffff0
 
 c_nazo_navy = #0000ff
+c_nazo_navy_transp = #0000ff99
 c_nazo_yellow = #d4ffa8
 
 c_pages = {
@@ -58,8 +59,8 @@ c_pages = {
         txt: c_nazo_navy,
         selectBg: c_top_pink,
         selectTxt: c_top_midnight,
-        scrollbar: c_top_purple,
-        scrollbarThumb: c_top_pink
+        scrollbar: transparent,
+        scrollbarThumb: c_nazo_navy_transp
     },
     eye: {
         bg: c_top_midnight,
